--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "chat-app-server",
+  "version": "1.0.0",
+  "description": "chat-app websocket server",
+  "main": "app.js",
+  "author": "bashow",
+  "license": "MIT",
+  "scripts": {
+    "start": "npx tsc && node dist/app.js"
+  },
   "dependencies": {
     "@types/node": "^16.9.6",
     "@types/socket.io": "^3.0.2",
+    "express": "^4.17.1",
     "socket.io": "^4.2.0",
     "typescript": "^4.4.3"
   }
