Add @types/express .

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npx tsc && node dist/app.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.9.6",
     "@types/socket.io": "^3.0.2",
     "express": "^4.17.1",
